add autocomplete options and selector

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
+    "dotenv-webpack": "^8.0.1",
     "webpack-cli": "^5.0.0"
   },
   "scripts": {
